# bird_counter

./: .gitignore  Cargo.toml  Cross.toml  README.md  migrations.toml  podman.sh
misc/: Dockerfile.gtk-armv7-unknown-linux-gnueabihf  README.md  common.sh  lib.sh
src/: chart.rs  gui.rs  main.rs
src/gui/: charts.rs  images.rs
