[package]
name = "bird_counter"
version = "0.1.0"
authors = ["Glenn Trigg <ggtrigg@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
turbosql = "0.1"
chrono = "0.4.19"

[dependencies.gdk-pixbuf]
version = "0.9.0"

[dependencies.gtk]
version = "0.9.0"
features = ["v3_16"]

[dependencies.gio]
version = ""
features = ["v2_44"]