[package]
name = "bird_counter"
version = "0.1.0"
authors = ["Glenn Trigg <ggtrigg@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
turbosql = "0.1"
chrono = "0.4.19"
directories-next = "2.0.0"

[dependencies.gdk]
version = "0.13.2"

[dependencies.glib]
version = "0.10.3"

[dependencies.gdk-pixbuf]
version = "0.9.0"

[dependencies.gtk]
version = "0.9.0"
features = ["v3_16"]

[dependencies.gio]
version = ""
features = ["v2_44"]

[dependencies.cairo-rs]
version = "0.9.1"
features = ["v1_16"]