[package]
name = "bird_counter"
version = "0.2.0"
authors = ["Glenn Trigg <ggtrigg@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
turbosql = "0.1"
chrono = "0.4"
directories-next = "2.0.0"
ux-primitives = "0.1"
ux-dataflow = "0.1"
ux-animate = "0.1"
ux-charts = "0.1"
glib = "0.10.3"
intmap = "0.7"

[dependencies.gdk]
version = "0.13.2"

[dependencies.gdk-pixbuf]
version = "0.9.0"

[dependencies.gtk]
version = "0.9.0"
features = ["v3_20"]

[dependencies.gio]
version = ""
features = ["v2_44"]

[dependencies.cairo-rs]
version = "0.9.1"